README: update readme for force jethro branch usage
Signed-off-by: Christophe Priouzeau <christophe.priouzeau@st.com>

--- a/README
+++ b/README
@@ -43,7 +43,7 @@ To download software
     repo sync
 
    cd layers
-   git clone https://github.com/cpriouzeau/meta-st-cannes2.git
+   git clone https://github.com/cpriouzeau/meta-st-cannes2.git -b jethro
 
 
 
