--- a/README
+++ b/README
@@ -1,10 +1,7 @@
 Meta-st-canne2
 ===========
 
-Meta-st-canne2 is a layer containing the st bsp metadata for current versions
-of OpenSDK.
-
-This layer depends on meta-opensdk to provide desired framework.
+Meta-st-canne2 is a layer containing the st bsp metadata.
 
 This layer relies on OpenEmbedded build system that is provided through
 Bitbake and OpenEmbedded-Core layers or Poky layer all part of the Yocto Project
